img folder added

--- a/report/Lab1.html
+++ b/report/Lab1.html
@@ -79,7 +79,7 @@
 
             <div id="block_task3" style="display: none;">
                 <a class="white_link" href="/lab/main.html" target="_blank">
-                    <img src="lab1screenshot.png" style="width: 100%;">
+                    <img src="/report/images/lab1screenshot.png" style="width: 100%;">
                 </a>
             </div>
 
