--- a/report/Report.html
+++ b/report/Report.html
@@ -17,7 +17,7 @@
                     <h1>"ІНТЕРНЕТ ТЕХНОЛОГІЇ та ПРОЄКТУВАННЯ ВЕБ ЗАСТОСУВАНЬ"</h1>
                     <h4>Студент группи ІС-23 Добруцький Ярослав Олександрович</h4>
                 </div>
-                <img src="photo.png" style="width: calc(10%);">
+                <img src="/report/images/photo.png" style="width: calc(10%);">
             </div>
 
             <hr>
