--- a/report/Report.html
+++ b/report/Report.html
@@ -29,8 +29,11 @@
             <iframe id="labFrame" src="" class="lab_frame"></iframe>
 
             <script src="script.js"></script>
-
         </div>
+    </div>
+
+    <div>
+        <a class="white_link" target="_blank" style="display: block; text-align: center;" href="https://github.com/sagayda/WEB">Github</a>
     </div>
 </body>
 
