--- a/lab/main.html
+++ b/lab/main.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="top">
+    <header class="top">
         <table>
             <tbody>
                 <tr>
@@ -18,9 +18,9 @@
                 </tr>
             </tbody>
         </table>
-    </div>
+    </header>
 
-    <div class="middle">
+    <main class="middle">
         <h3>Найпопулярніші страви на сьогодні: </h3>
         <ul>
             <li>
@@ -57,9 +57,9 @@
         <img src="https://alimero.ru/uploads/images/18/24/42/2021/04/28/5d880b.jpg" style="width: 25%; height: 25%;">
         <img src="https://luxcafe.com.ua/upload/resize_cache/iblock/0c4/600_600_1/64uc7pggb3nfuxbo5aoxp0v6sarywc1k.jpg" style="width: 25%; height: 25%;">
         <img src="https://www.maggi.ru/data/images/recept/img640x500/recept_3885_315o.jpg" style="width: 25%; height: 25%;">
-    </div>
+    </main>
 
-    <div>
+    <footer>
         <form action="main.html" target="_blank" method="post">
             <fieldset style="width:25%">
                 <legend>Зареєструватися</legend>
@@ -72,6 +72,6 @@
                 <input type="submit" value="Зареєструватися" />
             </fieldset>
         </form>
-    </div>
+    </footer>
 </body>
 </html>
