--- a/report/Report.html
+++ b/report/Report.html
@@ -8,33 +8,33 @@
     <title>Звіти</title>
 </head>
 
-<body>
-    <div class="page">
-        <div class="block">
-            <div style="margin: 0px; padding: 0px;" class="title_and_photo">
-                <div>
-                    <h2>Звіти з лабораторних робіт з дисципліни:</h2>
-                    <h1>"ІНТЕРНЕТ ТЕХНОЛОГІЇ та ПРОЄКТУВАННЯ ВЕБ ЗАСТОСУВАНЬ"</h1>
-                    <h4>Студент группи ІС-23 Добруцький Ярослав Олександрович</h4>
-                </div>
-                <img src="/report/images/photo.jpg" style="width: calc(10%);">
+<body class="page">
+    <div class="block">
+        <header style="margin: 0px; padding: 0px;" class="title_and_photo">
+            <div>
+                <h2>Звіти з лабораторних робіт з дисципліни:</h2>
+                <h1>"ІНТЕРНЕТ ТЕХНОЛОГІЇ та ПРОЄКТУВАННЯ ВЕБ ЗАСТОСУВАНЬ"</h1>
+                <h4>Студент группи ІС-23 Добруцький Ярослав Олександрович</h4>
             </div>
+            <img src="/report/images/photo.jpg" style="width: calc(10%);">
+        </header>
 
-            <hr>
+        <hr>
 
-            <nav class="button_selector">
-                <button id="labButton_lab1" onclick="selectLab('lab1')">Лабараторна робота №1</button>
-            </nav>
-            
+        <nav class="button_selector">
+            <button id="labButton_lab1" onclick="selectLab('lab1')">Лабараторна робота №1</button>
+        </nav>
+
+        <main>
             <iframe id="labFrame" src="" class="lab_frame"></iframe>
+        </main>
 
-            <script src="script.js"></script>
-        </div>
+        <script src="script.js"></script>
     </div>
 
-    <div>
+    <footer>
         <a class="white_link" target="_blank" style="display: block; text-align: center;" href="https://github.com/sagayda/WEB">Github</a>
-    </div>
+    </footer>
 </body>
 
 </html>
