index.html final fix

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <a href="/WEB/lab1/main.html">LAB 1</a>
-    <a href="WEB/lab2/main.html">LAB 2</a>
+    <a href="/WEB/lab2/main.html">LAB 2</a>
 </body>
 </html>
