--- a/lab2/main.html
+++ b/lab2/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,34 +9,114 @@
     <title>Document</title>
 
 </head>
+
 <body>
-    <header class="block">
+    <header >
         <div class="attic">
-            <div class="attic-buttons">
-                <button class="attic-button">UKR</button>
-                <button class="attic-button">RUS</button>
-                <button class="attic-button">ENG</button>
+            <div class="attic-button-group horizontal-list-group">
+                <ul>
+                    <li class="attic-animated-link" id="margin1">
+                        <a href="#">UKR</a>
+                    </li>
+                    <li class="attic-animated-link" id="margin1">
+                        <a href="#">RUS</a>
+                    </li>
+                    <li class="attic-animated-link" id="margin1">
+                        <a href="#">ENG</a>
+                    </li>
+                </ul>
             </div>
-            <div class="attic-link">
-                <p class="fa fa-instagram"></p>
-                <a href="https://www.instagram.com/">Ми в Instagram</a>
-                <p class="fa fa-telegram"></p>
-                <a href="https://web.telegram.org/">Ми в Telegram</a>
+            <div class="attic-link-group">
+                <div class="attic-link">
+                    <i class="fa fa-instagram"></i>
+                    <a href="https://www.instagram.com/">Ми в Instagram</a>
+                </div>
+                <div class="attic-link" style="margin-left: 32px;">
+                    <i class="fa fa-telegram"></i>
+                    <a href="https://web.telegram.org/">Ми в Telegram</a>
+                </div>
             </div>
         </div>
-        <nav class="block horizontal-list-group">
+        <div class="attic-title">
+            <div class="attic-title-name">
+                <h3>Ресторан</h3>
+                <h2>"Придумайте назву"</h2>
+            </div>
+            <div class="attic-title-phone">
+                <div class="attic-link">
+                    <i class="fa fa-phone"></i>
+                    <a href="#">+38 (093) 886-66-83</a>
+                    <span id="desc"> - замовити столик</span>
+                </div>
+                <div class="attic-link">
+                    <i class="fa fa-phone"></i>
+                    <a href="#">+38 (093) 886-66-83</a>
+                    <span id="desc"> - організація свят</span>
+                </div>
+            </div>
+            <div class="attic-title-map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3779.1641012281775!2d30.45600426699697!3d50.44917142958426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce82b9bc8a47%3A0x47514e5d91216bf3!2z0JrQuNGX0LLRgdGM0LrQuNC5INC_0L7Qu9GW0YLQtdGF0L3RltGH0L3QuNC5INGW0L3RgdGC0LjRgtGD0YIg0ZbQvNC10L3RliDQhtCz0L7RgNGPINCh0ZbQutC-0YDRgdGM0LrQvtCz0L4!5e0!3m2!1suk!2sua!4v1696162497858!5m2!1suk!2sua" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+        <nav class="block horizontal-list-group attic-nav">
             <ul>
-                <li>ELEM 1</li>
-                <li>ELEM 2</li>
-                <li>ELEM 3</li>
-                <li>ELEM 4</li>
+                <li class="attic-button">
+                    <a class="clear-link" href="#">Про нас</a>
+                    <ul>
+                        <li class="attic-animated-link-blacked">
+                            <a href="#">Контакти</a>
+                        </li>
+                        <li class="attic-animated-link-blacked">
+                            <a href="#">Новини</a>
+                        </li>
+                        <li class="attic-animated-link-blacked">
+                            <a href="#">Відгуки</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="attic-button">
+                    <a class="clear-link" href="#">Меню</a>
+                    <ul>
+                        <li class="attic-animated-link-blacked">
+                            <a href="#">Перші страви</a>
+                        </li>
+                        <li class=" attic-animated-link-blacked">
+                            <a href="#">Холодні закуски</a>
+                        </li>
+                        <li class=" attic-animated-link-blacked">
+                            <a href="#">Гарячі страви</a>
+                        </li>
+                        <li class="attic-animated-link-blacked">
+                            <a href="#">Десерти</a>
+                        </li>
+                        <li class="attic-animated-link-blacked">
+                            <a href="#">Напої</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="attic-button">
+                    <a class="clear-link" href="#">Ресторан</a>
+                </li>
+                <li class="attic-button">
+                    <a class="clear-link" href="#">Організація свят</a>
+                    <ul>
+                        <li class="attic-animated-link-blacked">
+                            <a href="#">Дні народження</a>
+                        </li>
+                        <li class=" attic-animated-link-blacked">
+                            <a href="#">Корпоративи</a>
+                        </li>
+                        <li class=" attic-animated-link-blacked">
+                            <a href="#">Весілля</a>
+                        </li>
+                        <li class=" attic-animated-link-blacked">
+                            <a href="#">Випускні</a>
+                        </li>
+                    </ul>
+                </li>
             </ul>
         </nav>
     </header>
-    <div class="block">
-        <main>
-            <h1>Страви</h1>
-        </main>
-    </div>
 </body>
+
 </html>
