--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <a href="/WEB/lab1/main.html">LAB 1</a>
     <a href="/WEB/lab2/main.html">LAB 2</a>
+    <a href="/WEB/lab3/main.html">LAB 3</a>
 </body>
 </html>
