fixed task 2 block display

--- a/lab3/task 2/block-fixed.html
+++ b/lab3/task 2/block-fixed.html
@@ -8,6 +8,7 @@
     <title>Table-block</title>
 
     <style>
+
         main, header, footer {
             border: 2px solid black;
             text-align: center;
@@ -16,6 +17,7 @@
         #_1 {
             height: 100px;
             width: 1200px;
+            margin: auto;
             text-align: center;
             background: blue;
         }
@@ -28,6 +30,7 @@
             height: 100px;
             width: 1200px;
             background: blue;
+            margin: auto;
         }
 
         #_4 {
@@ -43,6 +46,7 @@
             display: flex;
             height: 400px;
             width: 1200px;
+            margin: auto;
         }
 
         #_2,
