index.html update

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <a href="/WEB/lab1/main.html">LAB 1</a>
     <a href="/WEB/lab2/main.html">LAB 2</a>
     <a href="/WEB/lab3/main.html">LAB 3</a>
+    <a href="/WEB/lab4/main.html">LAB 4</a>
 </body>
 </html>
