--- a/lab4/main.html
+++ b/lab4/main.html
@@ -107,7 +107,7 @@
                         <li>
                             <a class=" attic-nav-link-dropdown" href="#">Весілля</a>
                         </li>
-                        <li >
+                        <li>
                             <a class=" attic-nav-link-dropdown" href="#">Випускні</a>
                         </li>
                     </ul>
@@ -142,19 +142,40 @@
                     </div>
                 </div>
             </div>
-            <div class="footer-link-container">
-                <a class="footer-link" href="#">Головна</a>
-                <a class="footer-link" href="#">Афіша</a>
-                <a class="footer-link" href="#">Контакти</a>
-                <a class="footer-link" href="#">Меню</a>
-                <a class="footer-link" href="#">Ресторан</a>
-                <a class="footer-link" href="#">Дні народження</a>
-                <a class="footer-link" href="#">Корпоративи</a>
-                <a class="footer-link" href="#">Весілля</a>
-                <a class="footer-link" href="#">Випускні</a>
-            </div>
+            <ul class="footer-link-container">
+                <li>
+                    <a class="footer-link" href="#">Головна</a>
+                </li>
+                <li>
+                    <a class="footer-link" href="#">Афіша</a>
+                </li>
+                <li>
+                    <a class="footer-link" href="#">Контакти</a>
+                </li>
+                <li>
+                    <a class="footer-link" href="#">Меню</a>
+                </li>
+                <li>
+                    <a class="footer-link" href="#">Ресторан</a>
+                </li>
+                <li>
+                    <a class="footer-link" href="#">Дні народження</a>
+                </li>
+                <li>
+                    <a class="footer-link" href="#">Корпоративи</a>
+                </li>
+                <li>
+                    <a class="footer-link" href="#">Весілля</a>
+                </li>
+                <li>
+                    <a class="footer-link" href="#">Випускні</a>
+                </li>
+            </ul>
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3779.1641012281775!2d30.45600426699697!3d50.44917142958426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce82b9bc8a47%3A0x47514e5d91216bf3!2z0JrQuNGX0LLRgdGM0LrQuNC5INC_0L7Qu9GW0YLQtdGF0L3RltGH0L3QuNC5INGW0L3RgdGC0LjRgtGD0YIg0ZbQvNC10L3RliDQhtCz0L7RgNGPINCh0ZbQutC-0YDRgdGM0LrQvtCz0L4!5e0!3m2!1suk!2sua!4v1696162497858!5m2!1suk!2sua" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3779.1641012281775!2d30.45600426699697!3d50.44917142958426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce82b9bc8a47%3A0x47514e5d91216bf3!2z0JrQuNGX0LLRgdGM0LrQuNC5INC_0L7Qu9GW0YLQtdGF0L3RltGH0L3QuNC5INGW0L3RgdGC0LjRgtGD0YIg0ZbQvNC10L3RliDQhtCz0L7RgNGPINCh0ZbQutC-0YDRgdGM0LrQvtCz0L4!5e0!3m2!1suk!2sua!4v1696162497858!5m2!1suk!2sua"
+                    width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
         <div class="footer-bottom">
