lab5 site finished

--- a/lab5/main.html
+++ b/lab5/main.html
@@ -116,17 +116,14 @@
         </nav>
     </header>
 
-    <main style="height: 1000px;">
+    <main>
         <div class="main-additional">
 
         </div>
         <div class="main">
             <div class="search-wrapper">
                 <form class="search-form">
-                    <input id="search" class="search-input" type="text" placeholder="Enter dish:">
-                    <ul id="options">
-
-                    </ul>
+                    <input id="search" class="search-input" type="text" placeholder="Знайти:">
                 </form>
             </div>
 
