--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <a href="/WEB/lab2/main.html">LAB 2</a>
     <a href="/WEB/lab3/main.html">LAB 3</a>
     <a href="/WEB/lab4/main.html">LAB 4</a>
+    <a href="/WEB/lab5/main.html">LAB 5</a>
 </body>
 </html>
