--- a/lab5/task/main.html
+++ b/lab5/task/main.html
@@ -9,6 +9,7 @@
     <form style="display: flex; flex-direction: column;">
         <input id="input" type="text" style="width: 25em; margin: 0.25em 0; padding: 0; box-sizing: border-box;">
         <input id="button" type="button" style="width: 25em; margin: 0.25em 0; padding: 0; box-sizing: border-box;">
+        <input type="date">
     </form>
     <div id="result"></div>
 
