--- a/lab6/task6/main.html
+++ b/lab6/task6/main.html
@@ -6,7 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-
+    <div style="display: flex; width: 100%; flex-grow: 1; height: 50px;">
+        <a href="/lab6/task2/main.html" style="flex-grow: 1; border: solid black 1px; text-align: center; line-height: 50px; border-radius: 4px; margin: 2px; text-decoration: none;">Task 2</a>
+        <a href="/lab6/task4/main.html" style="flex-grow: 1; border: solid black 1px; text-align: center; line-height: 50px; border-radius: 4px; margin: 2px; text-decoration: none;">Task 4</a>
+        <a href="/lab6/task6/main.html" style="flex-grow: 1; border: solid black 1px; text-align: center; line-height: 50px; border-radius: 4px; margin: 2px; text-decoration: none;">Task 6</a>
+        <a href="/lab6/task8/main.html" style="flex-grow: 1; border: solid black 1px; text-align: center; line-height: 50px; border-radius: 4px; margin: 2px; text-decoration: none;">Task 8</a>
+        <a href="/lab6/task9/main.html" style="flex-grow: 1; border: solid black 1px; text-align: center; line-height: 50px; border-radius: 4px; margin: 2px; text-decoration: none;">Task 9</a>
+        <a href="/lab6/task10/main.html" style="flex-grow: 1; border: solid black 1px; text-align: center; line-height: 50px; border-radius: 4px; margin: 2px; text-decoration: none;">Task 10</a>
+        
+    </div>
     <pre>Напишіть функцію, яка приймає массив об&#39;єктів і
 повертає новий массивоб&#39;єктів,у якому є знижка на 30 %
 на всі медикаменти ціна, яких перевищує 300 грн у
